// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryGuests Component should handle multiple display states, error, pending, fulfilled: error 1`] = `
<div
  className="fadein"
>
  <div
    className="curiosity-table-scroll"
    style={
      {
        "height": "275px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list"
      onScroll={[Function]}
    />
  </div>
</div>
`;

exports[`InventoryGuests Component should handle multiple display states, error, pending, fulfilled: fulfilled 1`] = `
<div
  className="fadein"
>
  <div
    className="curiosity-table-scroll"
    style={
      {
        "height": "275px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list"
      onScroll={[Function]}
    >
      <Table
        ariaLabel={null}
        className="curiosity-guests-list"
        columnHeaders={
          [
            "lorem",
            "dolor",
          ]
        }
        componentClassNames={
          {
            "table": "curiosity-table",
            "td": "curiosity-table__td",
            "tdAction": "curiosity-table__td-action",
            "tdExpand": "curiosity-table__td-expand",
            "tdExpanded": "curiosity-table__td-expand-expanded",
            "tdExpandedContent": "curiosity-table__td-expand-content",
            "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
            "tdSelect": "curiosity-table__td-select",
            "th": "curiosity-table__th",
            "tr": "curiosity-table__tr",
            "trExpand": "curiosity-table__tr-expand",
            "trExpanded": "curiosity-table__tr-expand-expanded",
            "trExpandedContent": "curiosity-table__tr-expand-content",
          }
        }
        emptyTable={
          {
            "message": "Clear all filters and try again",
            "title": "No results found",
          }
        }
        isBorders={false}
        isHeader={true}
        isStriped={false}
        onExpand={null}
        onSelect={null}
        onSort={null}
        rows={
          [
            {
              "cells": [
                "ipsum",
                "sit",
              ],
            },
          ]
        }
        summary={null}
        variant="compact"
      />
    </div>
  </div>
</div>
`;

exports[`InventoryGuests Component should handle multiple display states, error, pending, fulfilled: pending 1`] = `
<div
  className="fadein"
>
  <div
    className="curiosity-table-scroll"
    style={
      {
        "height": "275px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list"
      onScroll={[Function]}
    >
      <div
        className="curiosity-table-scroll-loader__custom"
      >
        <Loader
          skeletonProps={
            {
              "size": "sm",
            }
          }
          tableProps={
            {
              "borders": false,
              "className": "curiosity-guests-list",
              "colCount": 1,
              "colWidth": [],
              "isHeader": false,
              "rowCount": 1,
              "variant": "compact",
            }
          }
          variant="table"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`InventoryGuests Component should render a basic component: basic 1`] = `
<div
  className="fadein"
>
  <div
    className="curiosity-table-scroll"
    style={
      {
        "height": "42px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <div
        className="curiosity-table-scroll-loader__custom"
      >
        <Loader
          skeletonProps={
            {
              "size": "sm",
            }
          }
          tableProps={
            {
              "borders": false,
              "className": "curiosity-guests-list",
              "colCount": 1,
              "colWidth": [],
              "isHeader": false,
              "rowCount": 1,
              "variant": "compact",
            }
          }
          variant="table"
        />
      </div>
    </div>
  </div>
</div>
`;
